--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "vuepress": "^2.0.0-beta.27"
   }
