--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs --outDir dist",
-    "docs:preview": "vitepress preview docs"
+    "dev": "vitepress dev src",
+    "build": "vitepress build src --outDir docs",
+    "preview": "vitepress preview src"
   },
   "keywords": [],
   "author": "",
